--- a/help/index.html
+++ b/help/index.html
@@ -83,11 +83,12 @@
 <script src="/js/theme.js"></script>
 
 
-<a href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow"><img
-        src="https://informer.yandex.ru/informer/24943022/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+<a class="metrika" href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow">
+        <img src="https://informer.yandex.ru/informer/24943022/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
         style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
         title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
-        class="ym-advanced-informer" data-cid="24943022" data-lang="ru" /></a>
+        class="ym-advanced-informer" data-cid="24943022" data-lang="ru" />
+</a>
 
 
 
