--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
             
                 <li class="uk-flex uk-flex-middle">
                     <div class="uk-card uk-card-small uk-light ">
+                        <div class="uk-card-header uk-text-left uk-padding-remove uk-margin-top">Юлия, верстальщик с 20-летним стажем:</div>
+                        <div class="uk-card-body uk-padding-remove ">
+                            <span uk-icon="chevron-double-left"></span>Я не знаю, как без этого скрипта работать... Рука после загрузки текста во фрейм и присвоения стиля основного текста сама тянется уже автоматически. Сtrl &#43; A — весь тест, потом запуск скрипта. И вуаля — текст чистый, можно дальше его размечать!<span uk-icon="chevron-double-right"></span>
+                        </div>
+                    </div>
+                </li>
+            
+                <li class="uk-flex uk-flex-middle">
+                    <div class="uk-card uk-card-small uk-light ">
                         <div class="uk-card-header uk-text-left uk-padding-remove uk-margin-top">Максим Гостев, Нижний Новгород:</div>
                         <div class="uk-card-body uk-padding-remove ">
                             <span uk-icon="chevron-double-left"></span>sZam Виталия свет Батушева прекрасен как лицом, так и содержанием. Кроссплатформенный, независимый от версии, InDesign и InCopy совместимый, этот скрипт - совершенно необходимый инструмент в руках верстальщика, мало-мальски неравнодушного к тексту.<span uk-icon="chevron-double-right"></span>
