--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <div class="uk-section uk-text-center uk-section-small">
         <h1 class="uk-text-head uk-text-uppercase">Идеальный текст</h1>
         <hr class="uk-align-center uk-width-1-6@m">
-        <p class="">Скрипт sZam5 для Adobe InDesign и InCopy предназначен для нормализации текста,<br>а также для осуществления множественной процедуры поиска и замены с применением создаваемых пользователем наборов нормализаций.</p>
+        <p class="">Скрипт sZam5 для&nbsp;Adobe InDesign и&nbsp;InCopy предназначен для&nbsp;нормализации текста,<br>а&nbsp;также для&nbsp;осуществления множественной процедуры поиска и&nbsp;замены с&nbsp;применением создаваемых пользователем наборов нормализаций.</p>
         <p><a href="//allsoft.ru/software/independent-vendors/4161483/szam5/" class="uk-button uk-button-default" title="Купить на allsoft.ru за 1560 руб." target="_blank">Купить на Allsoft.ru <span class="uk-text-bold">за 1560 руб.</span></a></p>
-        <p><button  uk-toggle="target: #szamInfo" class="uk-button uk-button-danger uk-padding-small" style="line-height: 24px;" title="Мои контакты">Контакты, по которым меня можно найти и договориться о всяком</button></p>
+        <p><button  uk-toggle="target: #szamInfo" class="uk-button uk-button-danger uk-padding-small" style="line-height: 24px;" title="Мои контакты">Контакты, по&nbsp;которым меня можно найти и&nbsp;договориться &nbsp;всяком</button></p>
     </div>
 </div>
     <div class="uk-container uk-margin-large-top">
@@ -155,7 +155,7 @@
     <div id="screenshots" class="uk-container uk-text-center uk-margin-large-top">
     <h1 class="uk-text-head uk-text-uppercase">Как он выглядит</h1>
     <hr class="uk-align-center uk-width-1-6@m">
-    <p>Пакет sZam5 состоит из нескольких скриптов. Интерфейс одного из них, sZamEditor, представлен здесь.</p>
+    <p>Пакет sZam5 состоит из&nbsp;нескольких скриптов. Здесь вы&nbsp;можете видеть, как&nbsp;выглядит интерфейс скрипта sZamEditor, отвечающего за&nbsp;управление наборами нормализаций.</p>
     <div uk-grid class="uk-flex-center uk-child-width-1-3@s" uk-lightbox="animation: fade">
         
             <div>
@@ -191,8 +191,8 @@
     <div id="video" class="uk-container uk-text-center uk-margin-large-top">
     <h1 class="uk-text-head uk-text-uppercase">Видеоуроки</h1>
     <hr class="uk-align-center uk-width-1-6@m">
-    <p>Я предлагаю вам посмотреть несколько видеоуроков,<br>которые, надеюсь, помогут разобраться с работой sZam5.</p>
-    <div uk-grid class="uk-flex-center uk-child-width-1-3@s">
+    <p>Я&nbsp;предлагаю&nbsp;вам посмотреть несколько видеоуроков, которые,&nbsp;надеюсь, помогут разобраться с&nbsp;работой&nbsp;sZam5.</p>
+    <div uk-grid class="uk-flex-center uk-child-width-1-2@s">
         
         <div class="uk-inline">
             <img src="/images/countdown.jpg" class="uk-responsive-width uk-responsive-height" alt="Установка скрипта">
@@ -232,15 +232,15 @@
         <h4 class="uk-modal-title" id="myModalLabel">Мои контакты</h4>
       </div>
       <div class="uk-modal-body">
-        <h5>По вопросам, связанным с покупкой скрипта и его использованием, можно и нужно обращаться ко мне лично:</h5>
+        <h5>По&nbsp;вопросам, связанным с&nbsp;покупкой скрипта и&nbsp;его&nbsp;использованием, можно и&nbsp;нужно обращаться ко&nbsp;мне&nbsp;лично:</h5>
         <ul>
             <li>по электронной почте <a href="mailto:support@szam5.com">support@szam5.com</a></li>
             <li>по скайпу <a href="skype:vbatushev?call">vbatushev</a></li>
             <li>по Telegram:&nbsp;<a href="//t.me/vbatushev">https://t.me/vbatushev</a></li>
         </ul>
-        <p>В связи с тем, что я оказываю поддержку скрипта только зарегистрированным мною пользователям, не забудьте представиться, когда будете обращаться за оной поддержкой.</p>
+        <p>В связи с&nbsp;тем, что&nbsp;я&nbsp;оказываю поддержку скрипта только зарегистрированным мною пользователям, не&nbsp;забудьте представиться, когда будете обращаться за&nbsp;оной поддержкой.</p>
 
-        <p class="uk-text-center"><a href="https://scripts.szam5.com" class="uk-button uk-button-primary" target="_blank">Мои бесплатные скрипты для Adobe InDesign</a></p>
+        <p class="uk-text-center"><a href="https://scripts.szam5.com" class="uk-button uk-button-primary" target="_blank">Мои&nbsp;бесплатные скрипты для Adobe&nbsp;InDesign</a></p>
 
       <div class="uk-modal-footer uk-text-right">
         <p class="uk-text-bold">Виталий Батушев</p>
@@ -255,20 +255,19 @@
 <script src="/js/theme.js"></script>
 
 <hr />
+<div class="uk-container uk-text-center">
 
-<div class="uk-container uk-text-center uk-margin-bottom">
-        Виталий Батушев &copy; 2022
-</div>
-
-
-<a class="metrika" href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow">
+<a class="medrika" href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow">
         <img src="https://informer.yandex.ru/informer/24943022/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
         style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
         title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
         class="ym-advanced-informer" data-cid="24943022" data-lang="ru" />
 </a>
 
-
+</div>
+<div class="uk-container uk-text-center uk-margin-bottom">
+        Виталий Батушев &copy; 2022
+</div>
 
     </body>
 </html>
