--- a/help/versions/index.html
+++ b/help/versions/index.html
@@ -220,17 +220,6 @@
             </div>
         </div>
     </div>
-    <hr>
-    <div class="uk-container uk-text-center uk-margin-bottom">
-        Виталий Батушев &copy; 2022
-        
-        <a href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow"><img
-                src="https://informer.yandex.ru/informer/24943022/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
-                style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
-                title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
-                class="ym-advanced-informer" data-cid="24943022" data-lang="ru" /></a>
-        
-    <div>
 
         </div>
         <script src="//cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
@@ -238,20 +227,19 @@
 <script src="/js/theme.js"></script>
 
 <hr />
+<div class="uk-container uk-text-center">
 
-<div class="uk-container uk-text-center uk-margin-bottom">
-        Виталий Батушев &copy; 2022
-</div>
-
-
-<a class="metrika" href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow">
+<a class="medrika" href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow">
         <img src="https://informer.yandex.ru/informer/24943022/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
         style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
         title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
         class="ym-advanced-informer" data-cid="24943022" data-lang="ru" />
 </a>
 
-
+</div>
+<div class="uk-container uk-text-center uk-margin-bottom">
+        Виталий Батушев &copy; 2022
+</div>
 
     </body>
 </html>
