--- a/opinions/index.html
+++ b/opinions/index.html
@@ -90,16 +90,16 @@
             
             <div>
                 <div class="uk-card uk-card-default uk-card-body uk-card-small">
-                    <h3 class="uk-card-title">Денис Разумов, дизайнер, Красноярск</h3>
-                    <p class="uk-text-meta"></p>
+                    <h3 class="uk-card-title">Денис Разумов</h3>
+                    <p class="uk-text-meta">дизайнер, Красноярск</p>
                     <p>Этот скрипт — прекрасный инструмент, который облегчает работу не только верстальщику, но и корректору. Очень радует гибкая настройка и собственные правила нормализации текста. При работе с текстом, объемом больше одной страницы, считаю этот скрипт незаменимым инструментом для всех, кто ценит время и любит хорошую типографику.</p>
                 </div>
             </div>
             
             <div>
                 <div class="uk-card uk-card-default uk-card-body uk-card-small">
-                    <h3 class="uk-card-title">Глеб, благодарный пользователь</h3>
-                    <p class="uk-text-meta"></p>
+                    <h3 class="uk-card-title">Глеб</h3>
+                    <p class="uk-text-meta">благодарный пользователь</p>
                     <p>Виталий, огромное спасибо вам, за такой колоссальный труд, вашим скриптом пользуюсь с 2010 года!! Лучше скрипта обработки текста в вёрстке для индизайна — не встречал!! От всей души — Спасибо!!! И отдельное спасибо за поддержку, помощь и консультации! От полиграфиста полиграфисту — снимаю шляпу, в уважение!!!</p>
                 </div>
             </div>
