--- a/opinions/index.html
+++ b/opinions/index.html
@@ -90,9 +90,9 @@
             
             <div>
                 <div class="uk-card uk-card-default uk-card-body uk-card-small">
-                    <h3 class="uk-card-title">Ира Абзалова, графический дизайнер</h3>
-                    <p class="uk-text-meta"></p>
-                    <p>Какой святой же человек Виталий — создатель этого крутейшего скрипта для индизайна, который должны знать и использовать все, кто делают многостраничку! После переустановки индизайна скрипт не подтянулся, я запуталась в настройках, написала ему в «телегу», он мгновенно ответил, подключился и за 5 секунд решил всё! Хотя я покупала скрипт 2 года назад! Это и отличный продукт, и замечательный сервис!</p>
+                    <h3 class="uk-card-title">Ира Абзалова</h3>
+                    <p class="uk-text-meta">графический дизайнер</p>
+                    <p>Какой святой же человек Виталий, создатель этого крутейшего скрипта для индизайна, который должны знать и использовать все, кто делают многостраничку! После переустановки индизайна скрипт не подтянулся, я запуталась в настройках, написала ему в «телегу», он мгновенно ответил, подключился и за 5 секунд решил всё! Хотя я покупала скрипт 2 года назад! Это и отличный продукт, и замечательный сервис!</p>
                 </div>
             </div>
             
