обновил тексты и видео

--- a/help/preferences/index.html
+++ b/help/preferences/index.html
@@ -110,14 +110,14 @@
             </div>
             <div class="uk-width-4-5@m uk-width-1-1@s">
                 <h2 class="uk-margin-top">Настройки исполнения</h2>
-                <p>В данный раздел мной были вынесены те настройки, которые касаются достаточно редких настроек, а так же настройки связанные с местом хранения наборов и набором, используемом по умолчанию.</p>
+                <p>В этом разделе я собрал те параметры, которые встречаются нечасто, а также настройки, касающиеся расположения наборов и набора, используемого по умолчанию.</p>
 <figure >
     <img src="images/szam5editor-preferences-misc.png" title="">
     <figcaption class="uk-text-small uk-text-center"></figcaption>
 </figure>
-<p>В данном разделе вы можете указать место, откуда sZam5 будет брать наборы нормализаций. Это может быть полезно, если скрипт используется на нескольких машинах в редакции и необходимо использовать один и тот же набор нормализации при обработке текста.</p>
-<p>sZam5 изначально не знает ваших правил, привычек и предпочтений, к тому же он не обладает искусственным разумом и развитой интуицией, поэтому ему необходимо указать набор нормализаций, который он будет использовать по умолчанию —  в том случае, если вы воспользуетесь не контекстным меню, куда помещаются вызовы sZam5 с созданными вами наборами, а просто запустите из панели сам скрипт sZam5.</p>
-<p>Редкие настройки по умолчанию не активны, но если вам вдруг зачем-либо понадобится их исправить, вы можете сделать и это.</p>
+<p>Здесь вы можете определить, откуда скрипт sZam5 будет брать наборы нормализаций. Это особенно полезно, если скрипт используется на нескольких компьютерах в редакции и требуется применять один и тот же набор нормализации при обработке текстов.</p>
+<p>sZam5 не обладает искусственным интеллектом и развитой интуицией, поэтому ему нужно указать набор нормализаций, который он будет использовать по умолчанию. Это необходимо, если вы запускаете скрипт sZam5 напрямую из панели, а не через контекстное меню, где находятся вызовы sZam5 с вашими собственными наборами.</p>
+<p>По умолчанию редкие настройки не активны, но если вам всё же необходимо их изменить, вы можете это сделать.</p>
 <p>Ну, и завершает этот раздел информация о скрипте.</p>
 
                 
