--- a/opinions/index.html
+++ b/opinions/index.html
@@ -90,6 +90,14 @@
             
             <div>
                 <div class="uk-card uk-card-default uk-card-body uk-card-small">
+                    <h3 class="uk-card-title">Наталья</h3>
+                    <p class="uk-text-meta"></p>
+                    <p>Скрипт — просто огонь! Без него — как без рук, очень сильно помогает в вёрстке! Стоит каждой копеечки своей цены. Спасибо автору за его нелёгкий труд! Поддержка — тоже на высоте. Оперативно и понятно.</p>
+                </div>
+            </div>
+            
+            <div>
+                <div class="uk-card uk-card-default uk-card-body uk-card-small">
                     <h3 class="uk-card-title">Людмила И.</h3>
                     <p class="uk-text-meta"></p>
                     <p>Выражаю огромную благодарность за создание такого чудесного скрипта, который в разы облегчает работу всем, кто работает с текстами в InDesign! А ещё большое человеческое спасибо за помощь в установке. Так что всем, кто решил облегчить себе рабочие процессы, рекомендую пользоваться этим скриптом!</p>
