--- a/opinions/index.html
+++ b/opinions/index.html
@@ -90,6 +90,14 @@
             
             <div>
                 <div class="uk-card uk-card-default uk-card-body uk-card-small">
+                    <h3 class="uk-card-title">Максим Вихлянцев</h3>
+                    <p class="uk-text-meta">дизайнер-верстальщик, Ставрополь</p>
+                    <p>Скрипт sZam5 — незаменимый помощник в рутинных операциях при работе с текстом. Если ранее приходилось потратить кучу времени, теперь достаточно нескольких кликов. Текстовые файлы, приходящие от заказчиков, практически всегда требуют приведения в порядок. Двойные, тройные пробелы, абзацные отступы, которые вместо табов сделаны также пробелами, лишние точки, да много чего ещё. Всё это скрипт позволяет привести в порядок! Что и как должен обработать скрипт всегда можно настроить по своему желанию, а настройки сохранять в пресеты. В общем, крутая и нужная вещь! Всем рекомендую, а автору большое спасибо за труд!!!</p>
+                </div>
+            </div>
+            
+            <div>
+                <div class="uk-card uk-card-default uk-card-body uk-card-small">
                     <h3 class="uk-card-title">Наталья</h3>
                     <p class="uk-text-meta"></p>
                     <p>Скрипт — просто огонь! Без него — как без рук, очень сильно помогает в вёрстке! Стоит каждой копеечки своей цены. Спасибо автору за его нелёгкий труд! Поддержка — тоже на высоте. Оперативно и понятно.</p>
